Suppress warning about deprecated method in sun.misc.Unsafe